force-app/main/default/objects/Project__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(End_Date__c -  Start_Date__c) &amp; &quot; Days&quot;</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>