force-app/main/default/objects/Project__c/fields/Estimate_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Budget__c</fullName>
    <label>Estimate Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>