force-app/main/default/objects/Project__c/validationRules/StartDateLessThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateLessThanEndDate</fullName>
    <active>true</active>
    <description>The Start Date should be less than the End Date.</description>
    <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
    <errorMessage>The Start Date should be less than the End Date.</errorMessage>
</ValidationRule>